appId: com.maestro.test
---
- tapOn:
    id: ${INPUT_ID}
- inputText: ${TEXT}
- pressKey: Enter